# wadecv

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  docker-compose.yml
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: azure-appservice-cicd.yml  ci.yml
analytics/: WORKLOG.md  ga4_data.json  gsc_data.json  pull_gsc.py  pull_trends.py  trends_data.json
analytics/reports/: 2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-19-session-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md
backend/: Dockerfile  alembic.ini  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_cv.docx
backend/alembic/: env.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/scripts/: generate_openapi.py
backend/tests/: README_cv_prompt_expectations.md  README_one_page_cv_overflow.md  __init__.py  conftest.py  fixtures_cv_prompt_expectations.json  test_bullet_compaction.py  test_docx_builder_normalization.py  test_fit_flow.py  test_interests_guard.py  test_layout_iterations.py  (+2 more)
docs/: architecture.md  runbook.md
frontend/: ANALYTICS.md  Dockerfile  eslint.config.mjs  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
mcp-server/: README.md  google_clients.py  patch_models.py  pyproject.toml  seo_analysis.py  server.py
(+173 files in other folders)
